2014-02-09 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * revised examples in README.md and added specs to cover them
  * fixed Oval::Match#validate to handle non-string TypeError
2014-02-08 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.6
  * documented a way for validating arbitrary arguments
2014-02-03 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * added more navigation links to README.md
  * added specs for Oval::Base.it_should
  * release 0.0.5
  * refactored ensure_match -> validate
  * added Oval::Match declarator
  * fixed error message in OneOf to be more verbose
  * added it_should method to declarators
  * release 0.0.4
2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * corrections to README.md
  * small refactoring
  * removed dead code from class_decl_base.rb
  * release 0.0.3
  * fixed dependencies in oval.gemspec
  * release 0.0.2
  * fixed Modulefile
  * release 0.0.1
  * added note to README.md
  * corrected typos in README.md
  * fixed .travis.yml to reduce matrix size
  * fixed coveralls badge
  * fixed some specs for ruby 2.0
  * removed dead code from lib/oval/collection.rb
  * fixed build-puppet-module script
  * initial commit