@@ -1,4 +1,5 @@
 2014-02-09 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * fixed match_spec.rb to work on 1.8 and 2.0
   * revised examples in README.md and added specs to cover them
   * fixed Oval::Match#validate to handle non-string TypeError
 2014-02-08 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
